CFG-W26/CPSC 499.02/src/ca/ucalgary/cpsc499_02/w26/Java1_2ANTLRParser.java
// Generated from Java1_2ANTLRParser.g4 by ANTLR 4.13.2

	package ca.ucalgary.cpsc499_02.w26;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class Java1_2ANTLRParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ABSTRACT=1, BOOLEAN=2, BREAK=3, BYTE=4, CASE=5, CATCH=6, CHAR=7, CLASS=8, 
		CONTINUE=9, DEFAULT=10, DO=11, DOUBLE=12, ELSE=13, EXTENDS=14, FINAL=15, 
		FINALLY=16, FLOAT=17, FOR=18, IF=19, IMPLEMENTS=20, IMPORT=21, INSTANCEOF=22, 
		INT=23, INTERFACE=24, LONG=25, NATIVE=26, NEW=27, PACKAGE=28, PRIVATE=29, 
		PROTECTED=30, PUBLIC=31, RETURN=32, SHORT=33, STATIC=34, STRICTFP=35, 
		SUPER=36, SWITCH=37, SYNCHRONIZED=38, THIS=39, THROW=40, THROWS=41, TRANSIENT=42, 
		TRY=43, VOID=44, VOLATILE=45, WHILE=46, SEMICOLON=47, COMMA=48, PERIOD=49, 
		OPEN_PARENTHESIS=50, CLOSE_PARENTHESIS=51, OPEN_BRACE=52, CLOSE_BRACE=53, 
		OPEN_BRACKET=54, CLOSE_BRACKET=55, COLON=56, QUESTION=57, EQUALS=58, PLUS=59, 
		MINUS=60, ASTERISK=61, SLASH=62, PERCENT=63, DOUBLE_PLUS=64, DOUBLE_MINUS=65, 
		EXCLAMATION=66, TILDE=67, DOUBLE_EQUALS=68, EXCLAMATION_EQUALS=69, LESS_THAN=70, 
		GREATER_THAN=71, LESS_THAN_OR_EQUALS=72, GREATER_THAN_OR_EQUALS=73, DOUBLE_AMPERSAND=74, 
		DOUBLE_PIPE=75, AMPERSAND=76, PIPE=77, CARET=78, DOUBLE_LESS_THAN=79, 
		DOUBLE_GREATER_THAN=80, TRIPLE_GREATER_THAN=81, PLUS_EQUALS=82, MINUS_EQUALS=83, 
		ASTERISK_EQUALS=84, SLASH_EQUALS=85, AMPERSAND_EQUALS=86, PIPE_EQUALS=87, 
		CARET_EQUALS=88, PERCENT_EQUALS=89, DOUBLE_LESS_THAN_EQUALS=90, DOUBLE_GREATER_THAN_EQUALS=91, 
		TRIPLE_GREATER_THAN_EQUALS=92, Identifier=93, IntegerLiteral=94, FloatingPointLiteral=95, 
		CharacterLiteral=96, StringLiteral=97, BooleanLiteral=98, NullLiteral=99, 
		WHITESPACE=100, LINE_COMMENT=101, COMMENT=102;
	public static final int
		RULE_identifier = 0, RULE_qualifiedIdentifier = 1, RULE_literal = 2, RULE_type = 3, 
		RULE_basicType = 4, RULE_dims = 5, RULE_expression = 6, RULE_assignmentOperator = 7, 
		RULE_expression1 = 8, RULE_expression1Rest = 9, RULE_expression2 = 10, 
		RULE_expression2Rest = 11, RULE_infixOp = 12, RULE_expression3 = 13, RULE_prefixOp = 14, 
		RULE_postfixOp = 15, RULE_primary = 16, RULE_identifierSuffix = 17, RULE_selector = 18, 
		RULE_superSuffix = 19, RULE_arguments = 20, RULE_creator = 21, RULE_innerCreator = 22, 
		RULE_arrayCreatorRest = 23, RULE_classCreatorRest = 24, RULE_arrayInitializer = 25, 
		RULE_variableInitializer = 26, RULE_parenthesizedExpression = 27, RULE_block = 28, 
		RULE_blockStatement = 29, RULE_localVariableDeclarationStatement = 30, 
		RULE_statement = 31, RULE_ifStatement = 32, RULE_elseClause = 33, RULE_forStatement = 34, 
		RULE_whileStatement = 35, RULE_doStatement = 36, RULE_tryStatement = 37, 
		RULE_switchStatement = 38, RULE_synchronizedStatement = 39, RULE_returnStatement = 40, 
		RULE_throwStatement = 41, RULE_breakStatement = 42, RULE_continueStatement = 43, 
		RULE_emptyStatement = 44, RULE_expressionStatement = 45, RULE_labeledStatement = 46, 
		RULE_statementExpression = 47, RULE_constantExpression = 48, RULE_catches = 49, 
		RULE_catchClause = 50, RULE_finallyClause = 51, RULE_switchBlockStatementGroup = 52, 
		RULE_switchLabel = 53, RULE_forInit = 54, RULE_forUpdate = 55, RULE_modifier = 56, 
		RULE_variableDeclarators = 57, RULE_variableDeclarator = 58, RULE_variableDeclaratorId = 59, 
		RULE_constantDeclarator = 60, RULE_compilationUnit = 61, RULE_importDeclaration = 62, 
		RULE_typeDeclaration = 63, RULE_classOrInterfaceDeclaration = 64, RULE_classDeclaration = 65, 
		RULE_superclass = 66, RULE_superinterfaces = 67, RULE_interfaceDeclaration = 68, 
		RULE_extendsInterfaces = 69, RULE_typeList = 70, RULE_classBody = 71, 
		RULE_interfaceBody = 72, RULE_classBodyDeclaration = 73, RULE_emptyDeclaration = 74, 
		RULE_initializer = 75, RULE_staticInitializer = 76, RULE_memberDeclaration = 77, 
		RULE_methodDeclaration = 78, RULE_result = 79, RULE_throws_ = 80, RULE_fieldDeclaration = 81, 
		RULE_constructorDeclaration = 82, RULE_constructorBody = 83, RULE_explicitConstructorInvocation = 84, 
		RULE_interfaceBodyDeclaration = 85, RULE_interfaceMemberDeclaration = 86, 
		RULE_interfaceMethodDeclaration = 87, RULE_constantDeclaration = 88, RULE_qualifiedIdentifiers = 89, 
		RULE_formalParameters = 90, RULE_formalParameter = 91;
	private static String[] makeRuleNames() {
		return new String[] {
			"identifier", "qualifiedIdentifier", "literal", "type", "basicType", 
			"dims", "expression", "assignmentOperator", "expression1", "expression1Rest", 
			"expression2", "expression2Rest", "infixOp", "expression3", "prefixOp", 
			"postfixOp", "primary", "identifierSuffix", "selector", "superSuffix", 
			"arguments", "creator", "innerCreator", "arrayCreatorRest", "classCreatorRest", 
			"arrayInitializer", "variableInitializer", "parenthesizedExpression", 
			"block", "blockStatement", "localVariableDeclarationStatement", "statement", 
			"ifStatement", "elseClause", "forStatement", "whileStatement", "doStatement", 
			"tryStatement", "switchStatement", "synchronizedStatement", "returnStatement", 
			"throwStatement", "breakStatement", "continueStatement", "emptyStatement", 
			"expressionStatement", "labeledStatement", "statementExpression", "constantExpression", 
			"catches", "catchClause", "finallyClause", "switchBlockStatementGroup", 
			"switchLabel", "forInit", "forUpdate", "modifier", "variableDeclarators", 
			"variableDeclarator", "variableDeclaratorId", "constantDeclarator", "compilationUnit", 
			"importDeclaration", "typeDeclaration", "classOrInterfaceDeclaration", 
			"classDeclaration", "superclass", "superinterfaces", "interfaceDeclaration", 
			"extendsInterfaces", "typeList", "classBody", "interfaceBody", "classBodyDeclaration", 
			"emptyDeclaration", "initializer", "staticInitializer", "memberDeclaration", 
			"methodDeclaration", "result", "throws_", "fieldDeclaration", "constructorDeclaration", 
			"constructorBody", "explicitConstructorInvocation", "interfaceBodyDeclaration", 
			"interfaceMemberDeclaration", "interfaceMethodDeclaration", "constantDeclaration", 
			"qualifiedIdentifiers", "formalParameters", "formalParameter"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'abstract'", "'boolean'", "'break'", "'byte'", "'case'", "'catch'", 
			"'char'", "'class'", "'continue'", "'default'", "'do'", "'double'", "'else'", 
			"'extends'", "'final'", "'finally'", "'float'", "'for'", "'if'", "'implements'", 
			"'import'", "'instanceof'", "'int'", "'interface'", "'long'", "'native'", 
			"'new'", "'package'", "'private'", "'protected'", "'public'", "'return'", 
			"'short'", "'static'", "'strictfp'", "'super'", "'switch'", "'synchronized'", 
			"'this'", "'throw'", "'throws'", "'transient'", "'try'", "'void'", "'volatile'", 
			"'while'", "';'", "','", "'.'", "'('", "')'", "'{'", "'}'", "'['", "']'", 
			"':'", "'?'", "'='", "'+'", "'-'", "'*'", "'/'", "'%'", "'++'", "'--'", 
			"'!'", "'~'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'&&'", "'||'", 
			"'&'", "'|'", "'^'", "'<<'", "'>>'", "'>>>'", "'+='", "'-='", "'*='", 
			"'/='", "'&='", "'|='", "'^='", "'%='", "'<<='", "'>>='", "'>>>='", null, 
			null, null, null, null, null, "'null'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ABSTRACT", "BOOLEAN", "BREAK", "BYTE", "CASE", "CATCH", "CHAR", 
			"CLASS", "CONTINUE", "DEFAULT", "DO", "DOUBLE", "ELSE", "EXTENDS", "FINAL", 
			"FINALLY", "FLOAT", "FOR", "IF", "IMPLEMENTS", "IMPORT", "INSTANCEOF", 
			"INT", "INTERFACE", "LONG", "NATIVE", "NEW", "PACKAGE", "PRIVATE", "PROTECTED", 
			"PUBLIC", "RETURN", "SHORT", "STATIC", "STRICTFP", "SUPER", "SWITCH", 
			"SYNCHRONIZED", "THIS", "THROW", "THROWS", "TRANSIENT", "TRY", "VOID", 
			"VOLATILE", "WHILE", "SEMICOLON", "COMMA", "PERIOD", "OPEN_PARENTHESIS", 
			"CLOSE_PARENTHESIS", "OPEN_BRACE", "CLOSE_BRACE", "OPEN_BRACKET", "CLOSE_BRACKET", 
			"COLON", "QUESTION", "EQUALS", "PLUS", "MINUS", "ASTERISK", "SLASH", 
			"PERCENT", "DOUBLE_PLUS", "DOUBLE_MINUS", "EXCLAMATION", "TILDE", "DOUBLE_EQUALS", 
			"EXCLAMATION_EQUALS", "LESS_THAN", "GREATER_THAN", "LESS_THAN_OR_EQUALS", 
			"GREATER_THAN_OR_EQUALS", "DOUBLE_AMPERSAND", "DOUBLE_PIPE", "AMPERSAND", 
			"PIPE", "CARET", "DOUBLE_LESS_THAN", "DOUBLE_GREATER_THAN", "TRIPLE_GREATER_THAN", 
			"PLUS_EQUALS", "MINUS_EQUALS", "ASTERISK_EQUALS", "SLASH_EQUALS", "AMPERSAND_EQUALS", 
			"PIPE_EQUALS", "CARET_EQUALS", "PERCENT_EQUALS", "DOUBLE_LESS_THAN_EQUALS", 
			"DOUBLE_GREATER_THAN_EQUALS", "TRIPLE_GREATER_THAN_EQUALS", "Identifier", 
			"IntegerLiteral", "FloatingPointLiteral", "CharacterLiteral", "StringLiteral", 
			"BooleanLiteral", "NullLiteral", "WHITESPACE", "LINE_COMMENT", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Java1_2ANTLRParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public Java1_2ANTLRParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IdentifierContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(Java1_2ANTLRParser.Identifier, 0); }
		public IdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifier; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Java1_2ANTLRParserVisitor ) return ((Java1_2ANTLRParserVisitor<? extends T>)visitor).visitIdentifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdentifierContext identifier() throws RecognitionException {
		IdentifierContext _localctx = new IdentifierContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_identifier);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(184);
			match(Identifier);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QualifiedIdentifierContext extends ParserRuleContext {
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public List<TerminalNode> PERIOD() { return getTokens(Java1_2ANTLRParser.PERIOD); }
		public TerminalNode PERIOD(int i) {
			return getToken(Java1_2ANTLRParser.PERIOD, i);
		}
		public QualifiedIdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_qualifiedIdentifier; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Java1_2ANTLRParserVisitor ) return ((Java1_2ANTLRParserVisitor<? extends T>)visitor).visitQualifiedIdentifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QualifiedIdentifierContext qualifiedIdentifier() throws RecognitionException {
		QualifiedIdentifierContext _localctx = new QualifiedIdentifierContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_qualifiedIdentifier);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(186);
			identifier();
			setState(191);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(187);
					match(PERIOD);
					setState(188);
					identifier();
					}
					} 
				}
				setState(193);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LiteralContext extends ParserRuleContext {
		public TerminalNode IntegerLiteral() { return getToken(Java1_2ANTLRParser.IntegerLiteral, 0); }
		public TerminalNode FloatingPointLiteral() { return getToken(Java1_2ANTLRParser.FloatingPointLiteral, 0); }
		public TerminalNode CharacterLiteral() { return getToken(Java1_2ANTLRParser.CharacterLiteral, 0); }
		public TerminalNode StringLiteral() { return getToken(Java1_2ANTLRParser.StringLiteral, 0); }
		public TerminalNode BooleanLiteral() { return getToken(Java1_2ANTLRParser.BooleanLiteral, 0); }
		public TerminalNode NullLiteral() { return getToken(Java1_2ANTLRParser.NullLiteral, 0); }
		public LiteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_literal; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Java1_2ANTLRParserVisitor ) return ((Java1_2ANTLRParserVisitor<? extends T>)visitor).visitLiteral(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LiteralContext literal() throws RecognitionException {
		LiteralContext _localctx = new LiteralContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_literal);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(194);
			_la = _input.LA(1);
			if ( !(((((_la - 94)) & ~0x3f) == 0 && ((1L << (_la - 94)) & 63L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeContext extends ParserRuleContext {
		public QualifiedIdentifierContext qualifiedIdentifier() {
			return getRuleContext(QualifiedIdentifierContext.class,0);
		}
		public DimsContext dims() {
			return getRuleContext(DimsContext.class,0);
		}
		public BasicTypeContext basicType() {
			return getRuleContext(BasicTypeContext.class,0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Java1_2ANTLRParserVisitor ) return ((Java1_2ANTLRParserVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_type);
		int _la;
		try {
			setState(201);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Identifier:
				enterOuterAlt(_localctx, 1);
				{
				setState(196);
				qualifiedIdentifier();
				setState(198);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==OPEN_BRACKET) {
					{
					setState(197);
					dims();
					}
				}

				}
				break;
			case BOOLEAN:
			case BYTE:
			case CHAR:
			case DOUBLE:
			case FLOAT:
			case INT:
			case LONG:
			case SHORT:
				enterOuterAlt(_localctx, 2);
				{
				setState(200);
				basicType();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BasicTypeContext extends ParserRuleContext {
		public TerminalNode BYTE() { return getToken(Java1_2ANTLRParser.BYTE, 0); }
		public TerminalNode SHORT() { return getToken(Java1_2ANTLRParser.SHORT, 0); }
		public TerminalNode CHAR() { return getToken(Java1_2ANTLRParser.CHAR, 0); }
		public TerminalNode INT() { return getToken(Java1_2ANTLRParser.INT, 0); }
		public TerminalNode LONG() { return getToken(Java1_2ANTLRParser.LONG, 0); }
		public TerminalNode FLOAT() { return getToken(Java1_2ANTLRParser.FLOAT, 0); }
		public TerminalNode DOUBLE() { return getToken(Java1_2ANTLRParser.DOUBLE, 0); }
		public TerminalNode BOOLEAN() { return getToken(Java1_2ANTLRParser.BOOLEAN, 0); }
		public BasicTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_basicType; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Java1_2ANTLRParserVisitor ) return ((Java1_2ANTLRParserVisitor<? extends T>)visitor).visitBasicType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BasicTypeContext basicType() throws RecognitionException {
		BasicTypeContext _localctx = new BasicTypeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_basicType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(203);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 8632012948L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DimsContext extends ParserRuleContext {
		public List<TerminalNode> OPEN_BRACKET() { return getTokens(Java1_2ANTLRParser.OPEN_BRACKET); }
		public TerminalNode OPEN_BRACKET(int i) {
			return getToken(Java1_2ANTLRParser.OPEN_BRACKET, i);
		}
		public List<TerminalNode> CLOSE_BRACKET() { return getTokens(Java1_2ANTLRParser.CLOSE_BRACKET); }
		public TerminalNode CLOSE_BRACKET(int i) {
			return getToken(Java1_2ANTLRParser.CLOSE_BRACKET, i);
		}
		public DimsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dims; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Java1_2ANTLRParserVisitor ) return ((Java1_2ANTLRParserVisitor<? extends T>)visitor).visitDims(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DimsContext dims() throws RecognitionException {
		DimsContext _localctx = new DimsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_dims);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(207); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(205);
					match(OPEN_BRACKET);
					setState(206);
					match(CLOSE_BRACKET);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(209); 
